--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,8 +13,12 @@
             <h2>Sign Up</h2>
             <form id="signup-form">
                 <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" required>
+                    <label for="username">Full Name</label>
+                    <input type="text" id="full-name" name="full-name" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone-number">Phone Number</label>
+                    <input type="tel" id="phone-number" name="phone-number" required pattern="^\+?[1-9]\d{1,14}$">
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
@@ -37,7 +41,8 @@
             <p class="auth-text">Already have an account? <a href="login.html">Log in</a></p>
         </div>
     </div>
-
+    <!-- In your signup.html -->
+    <div id="home-url" data-home-url="{% url 'home' %}"></div>
     <script src="{% static "js/auth.js" %}"></script>
 </body>
 </html>
