--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,7 +11,7 @@
     <div class="auth-container">
         <div class="auth-form">
             <h2>Sign Up</h2>
-            <form id="signup-form">
+            <form id="signup-form" method="POST">
                 <div class="form-group">
                     <label for="username">Full Name</label>
                     <input type="text" id="full-name" name="full-name" required>
