--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
@@ -18,7 +19,7 @@
                 </div>
                 <div class="form-group">
                     <label for="phone-number">Phone Number</label>
-                    <input type="tel" id="phone-number" name="phone-number" required pattern="^\+?[1-9]\d{1,14}$">
+                    <input type="text" id="phone-number" name="phone-number">
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
