--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                     <h3>Current User</h3>
                     <p>Software Engineer</p>
                 </div>
-                <button id="logout-btn">Logout</button>
+                <a href="{% url "user_logout" %}"><button id="logout-btn">Logout</button></a>
                 <button id="settings-btn"><i class="fas fa-cog"></i></button>
                 <button id="notifications-btn"><i class="fas fa-bell"></i></button>
                 <button id="search-btn"><i class="fas fa-search"></i></button>
