--- a/templates/signup.html
+++ b/templates/signup.html
@@ -39,7 +39,7 @@
                 </div>
                 <button type="submit">Sign Up</button>
             </form>
-            <p class="auth-text">Already have an account? <a href="login.html">Log in</a></p>
+            <p class="auth-text">Already have an account? <a href="{% url "loginUser" %}">Log in</a></p>
         </div>
     </div>
     <!-- In your signup.html -->
