--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,28 +3,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{% static "css/profile.css" %}">
+    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <title>Profile</title>
 </head>
 <body>
     <div class="profile-container">
         <div class="profile-image">
-            <img id="profile-img" src="profile.png" alt="Profile Image">
+            <img id="profile-img" src="{{ user.profile_images.url }}" alt="Profile Image">
             <label class="edit-icon" for="file-input">
                 <i class="fas fa-camera"></i>
             </label>
-            <input type="file" id="file-input" accept="image/*" style="display:none;">
+            <input type="file" name="profile_image" id="file-input" accept="image/*" style="display:none;">
         </div>
-        <h2 id="user-name">User Name</h2>
-        <div class="status" id="user-status">Available</div>
-    
-        <input type="text" id="status-input" placeholder="Update Status">
-        <button id="update-status">Update Status</button>
-    
-        <input type="text" id="name-input" placeholder="Update Name">
-        <button id="update-name">Update Name</button>
+        <h2 id="user-name">{{ name }}</h2>
+        <div class="status" id="user-status">{{ status }}</div>
+        <form method="POST" action="{% url 'profile' %}" enctype="multipart/form-data">
+            {% csrf_token %}
+            <input type="text" name="status" id="status-input" placeholder="Update Status" value="{{ status }}">
+            <!--<input type="text" name="name" id="name-input" placeholder="Update Name" value="{{ name }}"> -->
+            <button type="submit" id="update-profile">Update Profile</button>
+        </form>
     </div>
-    <script src="{% static "js/profile.js" %}"></script>
 </body>
 </html>
