--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <!-- Sidebar (Chats list) -->
         <div class="sidebar">
             <div class="profile">
-                <a href="{% url "profile" %}"><img src="{% static 'media/profile.png' %}" alt="User"></a>
+                <a href="{% url "profile" %}"><img src="{{ profile_image }}" alt="User"></a>
                 <div class="user-info">
                     <h3>{{name}}</h3>
                     <p>Software Engineer</p>
@@ -55,7 +55,6 @@
                 <!-- Add more chat items -->
             </div>
         </div>
-
         <!-- Main chat window -->
         <div class="chat-window">
             <!-- Chat header -->
@@ -67,7 +66,6 @@
                     <button><i class="fas fa-search"></i></button>
                 </div>
             </div>
-
             <!-- Chat messages -->
             <div class="chat-content" id="chat-content">
                 <!-- Chat for user +92 321 9067312 -->
@@ -104,26 +102,23 @@
                     </div>
                 </div>
             </div>
-
             <!-- Input and attachments -->
             <div class="chat-input-section">
                 <button id="attachment-btn">📎</button>
                 <input type="text" placeholder="Type a message" id="message-input">
                 <button id="send-btn">Send</button>
             </div>
-
             <!-- Attachment Popup -->
             <div id="attachment-popup" class="popup hidden">
                 <div class="popup-option" id="photos-videos">Photos & Videos</div>
                 <div class="popup-option" id="camera">Camera</div>
                 <div class="popup-option" id="document">Document</div>
             </div>
-
             <!-- Overlay for closing popup -->
             <div id="overlay" class="overlay hidden"></div>
         </div>
     </div>
-
+    <div id="home-url" data-home-url="{% url 'home' %}"></div>
     <script src="{% static 'js/app.js' %}"></script>
 </body>
 </html>
